--- a/plugin/heThong/docsoft.plugin.hethong.thanhvien/mail-welcome.htm
+++ b/plugin/heThong/docsoft.plugin.hethong.thanhvien/mail-welcome.htm
@@ -9,7 +9,7 @@
                                 vertical-align: middle; padding: 4px 8px; font-size: 16px; letter-spacing: -0.03em;
                                 text-align: left">
                                     <span>
-                                        NhậtKýCon.Vn</span></td>
+                                        Xetui.vn</span></td>
                             <td style="background: #69a74e; color: #ffffff; font-weight: bold; font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;
                                 vertical-align: middle; padding: 4px 8px; font-size: 11px; text-align: right">
                             </td>
@@ -35,8 +35,8 @@
                                                             Hoặc bạn click vào liên kết bên dưới:
                                                             <br/><br/>
                                                             <h3>
-                                                                <a target="_blank" href="http://NhatKyCon.Vn/lib/admin/Default.aspx?ref=0.1701823388883157&amp;act=loadPlugDirect&amp;rqPlug=docsoft.plugin.hethong.thanhvien.Class1, docsoft.plugin.hethong.thanhvien&amp;subAct=activeUrl&amp;DiaChi={1}&Email={2}">
-                                                                    http://NhatKyCon.Vn/lib/admin/Default.aspx?ref=0.1701823388883157&amp;act=loadPlugDirect&amp;rqPlug=docsoft.plugin.hethong.thanhvien.Class1, docsoft.plugin.hethong.thanhvien&amp;subAct=activeUrl&amp;DiaChi={1}&Email={2}
+                                                                <a target="_blank" href="http://Xetui.vn/lib/admin/Default.aspx?ref=0.1701823388883157&amp;act=loadPlugDirect&amp;rqPlug=docsoft.plugin.hethong.thanhvien.Class1, docsoft.plugin.hethong.thanhvien&amp;subAct=activeUrl&amp;DiaChi={1}&Email={2}">
+                                                                    http://Xetui.vn/lib/admin/Default.aspx?ref=0.1701823388883157&amp;act=loadPlugDirect&amp;rqPlug=docsoft.plugin.hethong.thanhvien.Class1, docsoft.plugin.hethong.thanhvien&amp;subAct=activeUrl&amp;DiaChi={1}&Email={2}
                                                                 </a>
                                                             </h3>
                                                         </div>
@@ -46,8 +46,8 @@
                                                                     <tr>
                                                                         <td>
                                                                             <h2>
-                                                                            <a target="_blank" href="http://nhatkycon.vn/lib/pages/HeThong/GioiThieu.aspx">
-                                                                                Giới thiệu Nhật Ký Con</a>    
+                                                                            <a target="_blank" href="http://Xetui.vn/About-us/">
+                                                                                Giới thiệu Xetui.vn</a>    
                                                                             </h2>
                                                                         </td>
                                                                     </tr>
@@ -59,10 +59,11 @@
                                                     </div>
                                                 </div>
                                                 <div style="margin-bottom: 15px">
-                                                    Chào bạn đến với NhậtKýCon.com! - Lưu lại khoảnh khắc tuyệt diệu cho thiên thần của bạn</div>
+                                                    Chào bạn đến với Xetui.vn! - Cộng đồng dành cho xe và lái</div>
                                                 <div style="margin-bottom: 15px; font-size: 12px; font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;
                                                     margin: 0">
-                                                    Nhím</div>
+                                                    Nhím
+                                                </div>
                                             </td>
                                             <td valign="top" width="150" align="left" style="padding-left: 15px">
                                                 <table cellspacing="0" cellpadding="0" style="border-collapse: collapse">
@@ -81,8 +82,8 @@
                                                                                         <tr>
                                                                                             <td style="font-size: 11px; font-family: LucidaGrande,tahoma,verdana,arial,sans-serif;
                                                                                                 padding: 2px 6px 4px; border-top: 1px solid #95bf82">
-                                                                                                <a target="_blank" style="color: #3b5998; text-decoration: none" href="http://www.NhatKyCon.vn/">
-                                                                                                    <span style="font-weight: bold; white-space: nowrap; color: #fff; font-size: 13px">NhatKyCon.Vn</span></a>
+                                                                                                <a target="_blank" style="color: #3b5998; text-decoration: none" href="http://www.Xetui.vn/">
+                                                                                                    <span style="font-weight: bold; white-space: nowrap; color: #fff; font-size: 13px">Xetui.vn</span></a>
                                                                                             </td>
                                                                                         </tr>
                                                                                     </tbody>
