--- a/web/lib/lab/NewUploader.htm
+++ b/web/lib/lab/NewUploader.htm
@@ -63,7 +63,7 @@
                     </label>
                 </div>    
                 <div class="anh-img-box img-thumbnail">
-                    <img src="/lib/up/crop/${Thumbnail_url}?w=240&h=135"  data-key="${Thumbnail_url}" class="anh-img img-responsive"/>
+                    <img src="/lib/up/car/${Thumbnail_url}?w=240&h=135"  data-key="${Thumbnail_url}" class="anh-img img-responsive"/>
                 </div>
             </div>
         </script>
@@ -122,7 +122,7 @@
                     var Id = modal.find('.Id');
                     Id.val(id);
                     key.val(src);
-                    img.attr('src', '/lib/up/crop/' + src);
+                    img.attr('src', '/lib/up/car/' + src);
 
                     var btn = modal.find('.btnApply');
                     modal.modal('show');
